--- a/app/src/main/res/layout/activity_cadastro_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_aluno.xml
@@ -10,7 +10,8 @@
         android:id="@+id/tvCadastroAluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alata"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif"
         android:text="Cadastrar Aluno"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +25,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="#330B09"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
@@ -38,6 +40,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="#3A0909"
         android:ems="10"
         android:hint="Matrícula"
         android:inputType="textPersonName"
@@ -52,6 +55,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="#330909"
         android:ems="10"
         android:hint="Telefone"
         android:inputType="phone"
@@ -76,6 +80,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="#330909"
         android:ems="10"
         android:hint="Etnia ou Raça"
         android:inputType="textPersonName"
@@ -90,6 +95,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="#330909"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
