--- a/app/src/main/res/layout/activity_cadastro_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_aluno.xml
@@ -7,19 +7,20 @@
     tools:context=".CadastroAlunoActivity">
 
     <TextView
-        android:id="@+id/tvCadastroAluno"
+        android:id="@+id/tvCadastrarAlunoCadastroAluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
         android:text="Cadastrar Aluno"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etNome"
+        android:id="@+id/etNomeCadastroAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -31,10 +32,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCadastroAluno" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCadastrarAlunoCadastroAluno" />
 
     <EditText
-        android:id="@+id/mtMatricula"
+        android:id="@+id/etMatriculaCadastroAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -46,10 +47,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNome" />
+        app:layout_constraintTop_toBottomOf="@+id/etNomeCadastroAluno" />
 
     <EditText
-        android:id="@+id/etPhoneAluno"
+        android:id="@+id/etPhoneCadastroAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -61,20 +62,20 @@
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmailAluno" />
+        app:layout_constraintTop_toBottomOf="@+id/etEmailCadastroAluno" />
 
     <CheckBox
-        android:id="@+id/cbBolsa"
+        android:id="@+id/cbBolsaCadastroAluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Recebe bolsa da Assistência Estudantil?"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEtnia" />
+        app:layout_constraintTop_toBottomOf="@+id/etEtniaCadastroAluno" />
 
     <EditText
-        android:id="@+id/etEtnia"
+        android:id="@+id/etEtniaCadastroAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -86,10 +87,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPhoneAluno" />
+        app:layout_constraintTop_toBottomOf="@+id/etPhoneCadastroAluno" />
 
     <EditText
-        android:id="@+id/etEmailAluno"
+        android:id="@+id/etEmailCadastroAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -101,6 +102,6 @@
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mtMatricula" />
+        app:layout_constraintTop_toBottomOf="@+id/etMatriculaCadastroAluno" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
